k8s/base/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
  namespace: multi-tier-app
spec:
  type: ClusterIP
  selector:
    app: result
  ports:
    - port: 80
      targetPort: 80
